@@ -1,3 +1,9 @@
+2007-01-10  Ville Vainio  <vivainio@gmail.com>
+
+	* Extensions/envpersist.py: Turbocharged %env that remembers
+	env vars across sessions; e.g. "%env PATH+=;/opt/scripts" or
+	"%env VISUAL=jed".
+
 2007-01-05  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/iplib.py (showtraceback): ensure that we correctly call
